--- a/frontend/admin/gallery.html
+++ b/frontend/admin/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
@@ -38,7 +38,7 @@
   <body>
     <!-- ================= NAVBAR ================= -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm sticky-top"
+      class="navbar navbar-expand-lg navbar-dark bg-accent bg-dark shadow-sm sticky-top"
     >
       <div class="container">
         <a
@@ -135,7 +135,64 @@
                 href="#"
                 data-bs-toggle="dropdown"
               >
-                Admin
+                Profil
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="institusipelatihan.html"
+                    >Institusi Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="timkerja.html">Tim Kerja</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="historiakreditasi.html"
+                    >Histori Akreditasi</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+              >
+                Organisasi
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="jabatan.html"
+                    >Kelola Jabatan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="anggotaorganisasi.html"
+                    >Kelola Anggota</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+              <i class="bi bi-person-fill"></i>
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                >Admin
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
@@ -144,10 +201,24 @@
               </ul>
             </li>
 
-            <li class="nav-item">
-              <button class="btn btn-danger ms-3" onclick="logoutAdmin()">
-                Logout
-              </button>
+            <li class="nav-item dropdown">
+              <a
+                id="namaAdmin"
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                >Admin
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a
+                    class="dropdown-item text-danger"
+                    href="#"
+                    onclick="logoutAdmin()"
+                    >Logout</a
+                  >
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -504,7 +575,7 @@
 
             // tutup modal
             bootstrap.Modal.getInstance(
-              document.getElementById("modalTambahGallery")
+              document.getElementById("modalTambahGallery"),
             ).hide();
 
             loadGallery(); // refresh tabel
@@ -588,8 +659,8 @@
                   item.kategori === "sarpras"
                     ? "secondary"
                     : item.kategori === "diskusi"
-                    ? "primary"
-                    : "info"
+                      ? "primary"
+                      : "info"
                 }">
                   ${item.kategori}
                 </span></td>
@@ -615,7 +686,7 @@
 
           infoData.innerText = `Showing ${start + 1} to ${Math.min(
             end,
-            filteredData.length
+            filteredData.length,
           )} of ${filteredData.length} entries`;
 
           prevBtn.disabled = currentPage === 1;
@@ -653,12 +724,11 @@
             document.getElementById("edit_kategori").value = data.kategori;
             document.getElementById("edit_status").value = data.status;
 
-            document.getElementById(
-              "edit_previewFoto"
-            ).src = `http://localhost:5000/uploads/gallery/${data.foto}`;
+            document.getElementById("edit_previewFoto").src =
+              `http://localhost:5000/uploads/gallery/${data.foto}`;
 
             new bootstrap.Modal(
-              document.getElementById("modalEditGallery")
+              document.getElementById("modalEditGallery"),
             ).show();
           } catch (err) {
             alert("Gagal memuat data gallery");
@@ -676,7 +746,7 @@
 
             const id = document.getElementById("edit_id").value;
             const formData = new FormData(
-              document.getElementById("formEditGallery")
+              document.getElementById("formEditGallery"),
             );
 
             const res = await fetch(`${API}/${id}`, {
@@ -689,7 +759,7 @@
 
             if (res.ok) {
               bootstrap.Modal.getInstance(
-                document.getElementById("modalEditGallery")
+                document.getElementById("modalEditGallery"),
               ).hide();
               loadGallery();
             }
