--- a/frontend/index.html
+++ b/frontend/index.html
@@ -229,7 +229,7 @@
                   <div class="col-lg-6" data-aos="fade-right">
                     <div class="about-image">
                       <img
-                        src="/pelatihanmargono/backend/uploads/foto/PELATIHAN ACLS.jpeg"
+                        src="/pelatihanmargono/backend/uploads/foto/Anggota Diklat.JPG"
                         alt="RSMS"
                         class="img-fluid rounded-3 mb-4"
                       />
