--- a/frontend/profil.html
+++ b/frontend/profil.html
@@ -253,13 +253,13 @@
               <div class="about-content">
                <!-- BAGIAN ATAS -->
                 <div class="row g-4">
-                  <div class="col-md-12" data-aos="fade-up">
+                  <div class="col-md-6" data-aos="fade-up">
                     <div class="feature-item">
                       <h4 id="profilRingkasAtas">Memuat...</h4>
                     </div>
                   </div>
 
-                  <div class="col-md-12" data-aos="fade-up" data-aos-delay="150">
+                  <div class="col-md-6" data-aos="fade-up" data-aos-delay="150">
                     <div class="feature-item">
                       <h4 id="profilSK">
                         Memuat...
@@ -274,7 +274,7 @@
                   <div class="col-lg-6" data-aos="fade-right">
                     <div class="about-image">
                       <img
-                        src="assets/img/health/facilities-1.webp"
+                        src="/pelatihanmargono/backend/uploads/foto/Anggota Diklat 2.JPG"
                         alt="RSMS"
                         class="img-fluid rounded-3 mb-4"
                       />
