--- a/frontend/admin/historiakreditasi.html
+++ b/frontend/admin/historiakreditasi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
@@ -40,7 +40,7 @@
     <!-- NAVBAR -->
     <!-- ================= NAVBAR ================= -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm sticky-top"
+      class="navbar navbar-expand-lg navbar-dark bg-accent bg-dark shadow-sm sticky-top"
     >
       <div class="container">
         <a
@@ -137,7 +137,64 @@
                 href="#"
                 data-bs-toggle="dropdown"
               >
-                Admin
+                Profil
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="institusipelatihan.html"
+                    >Institusi Pelatihan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="timkerja.html">Tim Kerja</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="historiakreditasi.html"
+                    >Histori Akreditasi</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+              >
+                Organisasi
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a class="dropdown-item" href="jabatan.html"
+                    >Kelola Jabatan</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="anggotaorganisasi.html"
+                    >Kelola Anggota</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+              <i class="bi bi-person-fill"></i>
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                >Admin
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
                 <li>
@@ -146,10 +203,24 @@
               </ul>
             </li>
 
-            <li class="nav-item">
-              <button class="btn btn-danger ms-3" onclick="logoutAdmin()">
-                Logout
-              </button>
+            <li class="nav-item dropdown">
+              <a
+                id="namaAdmin"
+                class="nav-link dropdown-toggle"
+                href="#"
+                data-bs-toggle="dropdown"
+                >Admin
+              </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li>
+                  <a
+                    class="dropdown-item text-danger"
+                    href="#"
+                    onclick="logoutAdmin()"
+                    >Logout</a
+                  >
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -380,7 +451,7 @@
 
           infoData.innerText = `Showing ${start + 1} to ${Math.min(
             end,
-            filteredData.length
+            filteredData.length,
           )} of ${filteredData.length} entries`;
 
           prevBtn.disabled = currentPage === 1;
@@ -420,7 +491,7 @@
             data.masa_berlaku ?? "";
 
           new bootstrap.Modal(
-            document.getElementById("modalEditHistori")
+            document.getElementById("modalEditHistori"),
           ).show();
         };
 
@@ -447,14 +518,14 @@
                 method: "PUT",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify(body),
-              }
+              },
             );
 
             const data = await res.json();
             alert(data.message);
 
             bootstrap.Modal.getInstance(
-              document.getElementById("modalEditHistori")
+              document.getElementById("modalEditHistori"),
             ).hide();
 
             loadProfil();
@@ -468,7 +539,7 @@
 
           const res = await fetch(
             `http://localhost:5000/api/histori-akreditasi/${id}`,
-            { method: "DELETE" }
+            { method: "DELETE" },
           );
 
           const data = await res.json();
