nambahin profil diklat admin

--- a/frontend/admin/timkerja.html
+++ b/frontend/admin/timkerja.html
@@ -2,16 +2,13 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
+    <title>Admin - Tim Kerja</title>
 
-    <!-- Favicons -->
     <link
       rel="icon"
       href="/pelatihanmargono/backend/uploads/foto/LogoWeb.png"
       type="image/png"
-      sizes="512x512"
     />
-
-    <title>Admin - Kelola Jabatan</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -30,7 +27,7 @@
   </head>
 
   <body>
-    <!-- NAVBAR -->
+    <!-- ================= NAVBAR ================= -->
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-accent bg-dark shadow-sm sticky-top"
     >
@@ -168,7 +165,9 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="strukturorganisasi.html">Struktur Organisasi</a>
+                  <a class="dropdown-item" href="strukturorganisasi.html"
+                    >Struktur Organisasi</a
+                  >
                 </li>
               </ul>
             </li>
@@ -212,52 +211,38 @@
       </div>
     </nav>
 
-    <!-- CONTENT -->
+    <!-- ================= CONTENT ================= -->
     <div class="container py-4">
-      <h2 class="fw-bold mb-4">🏢 Kelola Jabatan</h2>
+      <h2 class="fw-bold mb-4">👥 Tim Kerja</h2>
 
       <div class="card">
-        <div class="card-header bg-dark text-white">Daftar Jabatan</div>
-
-        <div class="col-md-4 mt-3 ms-3 mb-3">
-          <input
-            type="text"
-            id="searchFasilitator"
-            placeholder="Cari..."
-            class="form-control"
-          />
-        </div>
-
-        <div class="col-md-12">
+        <div
+          class="card-header bg-dark text-white d-flex justify-content-between"
+        >
+          <span>Data Tim Kerja</span>
           <button
-            class="btn btn-primary mt-3 mb-2 ms-3"
+            class="btn btn-sm btn-primary"
             data-bs-toggle="modal"
-            data-bs-target="#modalTambahJabatan"
+            data-bs-target="#modalTambah"
           >
-            + Tambah Jabatan
+            + Tambah
           </button>
         </div>
 
-        <div class="table-responsive ms-3 me-3">
+        <div class="table-responsive mt-3 ms-3 me-3">
           <table class="table table-bordered">
             <thead class="thead-telur-asin">
               <tr>
                 <th>No</th>
-                <th>Nama Jabatan</th>
-                <th>Parent</th>
-                <th>Level</th>
-                <th>Relasi</th>
-                <th>Urutan</th>
+                <th>Jabatan</th>
                 <th>Aksi</th>
               </tr>
             </thead>
-            <tbody id="tableJabatan"></tbody>
+            <tbody id="tableTim"></tbody>
           </table>
         </div>
-        <!-- FOOTER PAGINATION -->
-        <div
-          class="card-footer d-flex justify-content-between align-items-center"
-        >
+
+        <div class="card-footer d-flex justify-content-between">
           <div id="infoData" class="text-muted"></div>
           <div>
             <button class="btn btn-outline-secondary btn-sm" id="prevBtn">
@@ -272,11 +257,11 @@
     </div>
 
     <!-- ================= MODAL TAMBAH ================= -->
-    <div class="modal fade" id="modalTambahJabatan">
-      <div class="modal-dialog">
+    <div class="modal fade" id="modalTambah">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header bg-dark text-white">
-            <h5 class="modal-title">Tambah Jabatan</h5>
+            <h5 class="modal-title">Tambah Tim Kerja</h5>
             <button
               class="btn-close btn-close-white"
               data-bs-dismiss="modal"
@@ -284,47 +269,11 @@
           </div>
 
           <div class="modal-body">
-            <form id="formTambahJabatan">
-              <label class="form-label">Nama Jabatan *</label>
-              <input name="nama_jabatan" class="form-control mb-2" required />
-
-              <label class="form-label">Parent Jabatan</label>
-              <select
-                name="parent_id"
-                id="parentTambah"
-                class="form-control mb-2"
-              >
-                <option value="">-- Tidak Ada --</option>
-              </select>
-
-              <label class="form-label">Level Jabatan</label>
-              <input
-                type="number"
-                name="level_jabatan"
-                class="form-control mb-2"
-                min="1"
-                step="1"
-                value="1"
-              />
-
-              <label class="form-label">Jenis Relasi</label>
-              <select name="jenis_relasi" class="form-control mb-2">
-                <option value="komando">Komando</option>
-                <option value="koordinasi">Koordinasi</option>
-              </select>
-
-              <label class="form-label">Urutan</label>
-              <input
-                type="number"
-                name="urutan"
-                class="form-control mb-2"
-                min="0"
-                step="1"
-                value="0"
-              />
-
-              <label class="form-label">Keterangan</label>
-              <textarea name="keterangan" class="form-control"></textarea>
+            <form id="formTambah">
+              <div class="mb-3">
+                <label class="form-label">Jabatan</label>
+                <input name="jabatan" class="form-control" required />
+              </div>
             </form>
           </div>
 
@@ -332,20 +281,18 @@
             <button class="btn btn-secondary" data-bs-dismiss="modal">
               Batal
             </button>
-            <button class="btn btn-primary" form="formTambahJabatan">
-              Simpan
-            </button>
+            <button class="btn btn-primary" form="formTambah">Simpan</button>
           </div>
         </div>
       </div>
     </div>
 
     <!-- ================= MODAL EDIT ================= -->
-    <div class="modal fade" id="modalEditJabatan">
-      <div class="modal-dialog">
+    <div class="modal fade" id="modalEdit">
+      <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header bg-dark text-white">
-            <h5 class="modal-title">Edit Jabatan</h5>
+            <h5 class="modal-title">Edit Tim Kerja</h5>
             <button
               class="btn-close btn-close-white"
               data-bs-dismiss="modal"
@@ -353,31 +300,14 @@
           </div>
 
           <div class="modal-body">
-            <form id="formEditJabatan">
+            <form id="formEdit">
               <input type="hidden" id="edit_id" />
 
-              <label class="form-label">Nama Jabatan *</label>
-              <input id="edit_nama" class="form-control mb-2" required />
+              <div class="mb-3">
+                <label class="form-label">Jabatan</label>
+                <input id="edit_jabatan" name="jabatan" class="form-control" />
+              </div>
 
-              <label class="form-label">Parent Jabatan</label>
-              <select id="edit_parent" class="form-control mb-2">
-                <option value="">-- Tidak Ada --</option>
-              </select>
-
-              <label class="form-label">Level</label>
-              <input type="number" id="edit_level" class="form-control mb-2" />
-
-              <label class="form-label">Jenis Relasi</label>
-              <select id="edit_relasi" class="form-control mb-2">
-                <option value="komando">Komando</option>
-                <option value="koordinasi">Koordinasi</option>
-              </select>
-
-              <label class="form-label">Urutan</label>
-              <input type="number" id="edit_urutan" class="form-control mb-2" />
-
-              <label class="form-label">Keterangan</label>
-              <textarea id="edit_keterangan" class="form-control"></textarea>
             </form>
           </div>
 
@@ -385,7 +315,7 @@
             <button class="btn btn-secondary" data-bs-dismiss="modal">
               Batal
             </button>
-            <button class="btn btn-primary" form="formEditJabatan">
+            <button class="btn btn-primary" form="formEdit">
               Simpan Perubahan
             </button>
           </div>
@@ -395,58 +325,52 @@
 
     <!-- ================= SCRIPT ================= -->
     <script>
-      const API = "http://localhost:5000/api/jabatan";
+      async function logoutAdmin() {
+        if (!confirm("Yakin logout?")) return;
+        await fetch("http://localhost:5000/api/admin/logout", {
+          method: "POST",
+          credentials: "include",
+        });
+        localStorage.clear();
+        window.location.href = "loginadmin.html";
+      }
 
-      const ADMIN_HEADERS = {
-        "Content-Type": "application/json",
-        "x-admin-id": localStorage.getItem("admin_id"),
-        "x-admin-email": localStorage.getItem("admin_email"),
-        "x-admin-nama": localStorage.getItem("admin_nama"),
-      };
+      const API = "http://localhost:5000/api/tim-kerja";
 
-      let dataJabatan = [];
+      let allData = [];
       let filteredData = [];
       let currentPage = 1;
       const rowsPerPage = 5;
 
-      const tableBody = document.getElementById("tableJabatan");
+      const tableBody = document.getElementById("tableTim");
       const infoData = document.getElementById("infoData");
       const prevBtn = document.getElementById("prevBtn");
       const nextBtn = document.getElementById("nextBtn");
-      const searchInput = document.getElementById("searchFasilitator");
 
-      /* ================= LOAD DATA ================= */
-      async function loadJabatan() {
+      async function loadData() {
         const res = await fetch(API);
-        dataJabatan = await res.json();
-        applyFilter();
-        fillParent();
-      }
+        const json = await res.json();
 
-      /* ================= FILTER ================= */
-      function applyFilter() {
-        const keyword = searchInput.value.toLowerCase();
-
-        filteredData = dataJabatan.filter((j) =>
-          j.nama_jabatan.toLowerCase().includes(keyword),
-        );
-
+        allData = Array.isArray(json) ? json : [];
+        filteredData = [...allData];
         currentPage = 1;
+
         renderTable();
       }
 
-      /* ================= RENDER ================= */
       function renderTable() {
         tableBody.innerHTML = "";
 
         if (filteredData.length === 0) {
           tableBody.innerHTML = `
-        <tr>
-          <td colspan="7" class="text-center text-muted">
-            Data tidak ditemukan
-          </td>
-        </tr>`;
+      <tr>
+        <td colspan="4" class="text-center text-muted">
+          Data tidak ditemukan
+        </td>
+      </tr>
+    `;
           infoData.innerText = "Showing 0 entries";
+          prevBtn.disabled = nextBtn.disabled = true;
           return;
         }
 
@@ -455,38 +379,23 @@
         const pageData = filteredData.slice(start, end);
 
         pageData.forEach((item, index) => {
-          const parent = dataJabatan.find(
-            (p) => p.id_jabatan === item.parent_id,
-          );
-
           tableBody.innerHTML += `
-        <tr>
-          <td>${start + index + 1}</td>
-          <td>${item.nama_jabatan}</td>
-          <td>${parent ? parent.nama_jabatan : "-"}</td>
-          <td>${item.level_jabatan}</td>
-          <td>${item.jenis_relasi}</td>
-          <td>${item.urutan}</td>
-          <td>
-            <button class="btn btn-warning btn-sm"
-              onclick="editJabatan(${item.id_jabatan})">
-              Edit
-            </button>
-          </td>
-        </tr>
-      `;
+      <tr>
+        <td>${start + index + 1}</td>
+        <td>${item.jabatan}</td>
+        <td>
+          <button class="btn btn-warning btn-sm" onclick="openEdit(${item.id})">Edit</button>
+          <button class="btn btn-danger btn-sm" onclick="hapus(${item.id})">Hapus</button>
+        </td>
+      </tr>
+    `;
         });
 
-        infoData.innerText = `Showing ${start + 1} to ${Math.min(
-          end,
-          filteredData.length,
-        )} of ${filteredData.length} entries`;
-
+        infoData.innerText = `Showing ${start + 1} to ${Math.min(end, filteredData.length)} of ${filteredData.length} entries`;
         prevBtn.disabled = currentPage === 1;
         nextBtn.disabled = end >= filteredData.length;
       }
 
-      /* ================= PAGINATION ================= */
       prevBtn.onclick = () => {
         if (currentPage > 1) {
           currentPage--;
@@ -501,93 +410,62 @@
         }
       };
 
-      /* ================= PARENT SELECT ================= */
-      function fillParent() {
-        const selects = [
-          document.getElementById("parentTambah"),
-          document.getElementById("edit_parent"),
-        ];
+      window.openEdit = (id) => {
+        const data = allData.find((d) => d.id == id);
 
-        selects.forEach((s) => {
-          s.innerHTML = `<option value="">-- Tidak Ada --</option>`;
-          dataJabatan.forEach((j) => {
-            s.innerHTML += `<option value="${j.id_jabatan}">
-          ${j.nama_jabatan}
-        </option>`;
+        edit_id.value = data.id;
+        edit_jabatan.value = data.jabatan;
+
+        new bootstrap.Modal(document.getElementById("modalEdit")).show();
+      };
+
+      document
+        .getElementById("formTambah")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
+
+          const body = Object.fromEntries(new FormData(e.target));
+
+          await fetch(API, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(body),
           });
-        });
-      }
 
-      /* ================= TAMBAH ================= */
-      document.getElementById("formTambahJabatan").onsubmit = async (e) => {
-        e.preventDefault();
-
-        const body = Object.fromEntries(new FormData(e.target));
-
-        const res = await fetch(API, {
-          method: "POST",
-          headers: ADMIN_HEADERS,
-          body: JSON.stringify(body),
+          bootstrap.Modal.getInstance(
+            document.getElementById("modalTambah"),
+          ).hide();
+          loadData();
         });
 
-        const data = await res.json();
-        alert(data.message);
+      document
+        .getElementById("formEdit")
+        .addEventListener("submit", async (e) => {
+          e.preventDefault();
 
-        bootstrap.Modal.getInstance(
-          document.getElementById("modalTambahJabatan"),
-        ).hide();
+          const id = edit_id.value;
+          const body = Object.fromEntries(new FormData(e.target));
 
-        e.target.reset();
-        loadJabatan();
-      };
+          await fetch(`${API}/${id}`, {
+            method: "PUT",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(body),
+          });
 
-      /* ================= EDIT ================= */
-      window.editJabatan = (id) => {
-        const j = dataJabatan.find((x) => x.id_jabatan === id);
-
-        edit_id.value = j.id_jabatan;
-        edit_nama.value = j.nama_jabatan;
-        edit_parent.value = j.parent_id || "";
-        edit_level.value = j.level_jabatan;
-        edit_relasi.value = j.jenis_relasi;
-        edit_urutan.value = j.urutan;
-        edit_keterangan.value = j.keterangan || "";
-
-        new bootstrap.Modal(document.getElementById("modalEditJabatan")).show();
-      };
-
-      document.getElementById("formEditJabatan").onsubmit = async (e) => {
-        e.preventDefault();
-
-        const id = edit_id.value;
-
-        const body = {
-          nama_jabatan: edit_nama.value,
-          parent_id: edit_parent.value || null,
-          level_jabatan: edit_level.value,
-          jenis_relasi: edit_relasi.value,
-          urutan: edit_urutan.value,
-          keterangan: edit_keterangan.value,
-        };
-
-        const res = await fetch(`${API}/${id}`, {
-          method: "PUT",
-          headers: ADMIN_HEADERS,
-          body: JSON.stringify(body),
+          bootstrap.Modal.getInstance(
+            document.getElementById("modalEdit"),
+          ).hide();
+          loadData();
         });
 
-        const data = await res.json();
-        alert(data.message);
+      window.hapus = async (id) => {
+        if (!confirm("Hapus data ini?")) return;
 
-        bootstrap.Modal.getInstance(
-          document.getElementById("modalEditJabatan"),
-        ).hide();
-
-        loadJabatan();
+        await fetch(`${API}/${id}`, { method: "DELETE" });
+        loadData();
       };
 
-      searchInput.addEventListener("input", applyFilter);
-      document.addEventListener("DOMContentLoaded", loadJabatan);
+      document.addEventListener("DOMContentLoaded", loadData);
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
